@@ -1,3 +1,14 @@
+2021-12-08  Per Arne Vollan  <pvollan@apple.com>
+
+        [iOS][WP] Block unused sys calls
+        https://bugs.webkit.org/show_bug.cgi?id=233999
+
+        Reviewed by Brent Fulgham.
+
+        Block sys calls in the WebContent process on iOS that are unused according to telemetry.
+
+        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:
+
 2021-12-08  Tim Horton  <timothy_horton@apple.com>
 
         Momentum Event Dispatcher: Momentum tail should have montonically decreasing deltas and tail gaps
